# spacee

./: CMakeLists.txt  cmakeMingw.bat
src/: linearspace.cpp  spacee.cpp
src/include/: linearspace.hpp  spacee.hpp  spacemodel.hpp
